--- a/building.html
+++ b/building.html
@@ -445,7 +445,7 @@
 		});
 
 		// GeoServer URL
-		var geoserverUrl = 'https://pmc.geopulsea.com/geoserver';
+		var geoserverUrl = 'https://iwmsgis.pmc.gov.in/geoserver';
 
 		// Variable to keep track of legend visibility
 		var legendVisible = true;
@@ -611,7 +611,7 @@
 			div.appendChild(toggleButton);
 
 			// Fetch capabilities to get all layers in the 'pmc' workspace
-			fetch('https://pmc.geopulsea.com/geoserver/ows?service=wms&version=1.3.0&request=GetCapabilities')
+			fetch('https://iwmsgis.pmc.gov.in/geoserver/ows?service=wms&version=1.3.0&request=GetCapabilities')
 				.then((response) => response.text())
 				.then((data) => {
 					// Parse capabilities XML response
