--- a/index.html
+++ b/index.html
@@ -183,7 +183,63 @@
 
   <link rel="stylesheet" href="libs/leaflet-wms-legend/leaflet.wmslegend.css" />
   <script src="libs/leaflet-wms-legend/leaflet.wmslegend.js"></script>
+<style>
 
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  margin: auto;
+  width: 100%; /* Full width */
+  height: 100% ;/* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  z-index: 10000;
+  
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  /* border: 1px solid #888; */
+  width: 20%; /* Could be more or less, depending on screen size */
+  box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
+}
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Loader */
+#loader {
+  border: 4px solid #f3f3f3; /* Light grey */
+  border-top: 4px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+  margin: 20px auto;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+</style>
 
 
 </head>
@@ -208,9 +264,24 @@
       <tbody id="workTableData"></tbody>
     </table>
   </div>
+
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <div id="loader"></div>
+      <div id="message">Please fill in the information.</div>
+    </div>
+  </div>
+  
+
+
   <script src="js/config.js"></script>
 
   <script src="js/index-page.js"></script>
+
+
+  
+
 
   <script>
 
@@ -847,5 +918,8 @@ function toggleSelectLayerButton(show) {
       // Customize the zoom control position
       map.zoomControl.setPosition("bottomright");
     </script>
+
+
+
   </body>
 </html>
