--- a/drainage.html
+++ b/drainage.html
@@ -120,8 +120,8 @@
 
 
 
-  <link rel="stylesheet" href="libs/leaflet-wms-legend/leaflet.wmslegend.css" />
-  <script src="libs/leaflet-wms-legend/leaflet.wmslegend.js"></script>
+  <!-- <link rel="stylesheet" href="libs/leaflet-wms-legend/leaflet.wmslegend.css" />
+  <script src="libs/leaflet-wms-legend/leaflet.wmslegend.js"></script> -->
 
 
 
@@ -188,7 +188,7 @@ function toggleSelectLayerButton(show) {
           if (searchTerm.length >= 3 && searchType) {
             let cqlFilter = `${searchType} ILIKE '%${searchTerm}%'`;
 
-            let geoServerURL = `https://pmc.geopulsea.com/geoserver/pmc/wfs?service=WFS&version=1.1.0&request=GetFeature&typeName=IWMS_point&outputFormat=application/json&CQL_FILTER=${encodeURIComponent(
+            let geoServerURL = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wfs?service=WFS&version=1.1.0&request=GetFeature&typeName=IWMS_point&outputFormat=application/json&CQL_FILTER=${encodeURIComponent(
               cqlFilter
             )}`;
 
@@ -561,28 +561,7 @@ function toggleSelectLayerButton(show) {
     };
 
 
-    // code for image on perform button
-
-
-    //     editControl.onAdd = function (map) {
-    //   var button = L.DomUtil.create('button', 'custom-button');
-    //   var img = document.createElement('img');
-    //   img.src = './png/003-selection.png'; 
-    //   img.style.width = '25px'; // Example width
-    //   img.style.height = '25px'; // Example height
-    //   button.appendChild(img);
-    //   button.innerHTML += ' Perform Task'; 
-    //   button.onclick = function () {
-    //     if (button.innerHTML.includes('Perform Task')) {
-    //       button.innerHTML = button.innerHTML.replace('Perform Task', 'Stop Task');
-    //       performTask();
-    //     } else {
-    //       button.innerHTML = button.innerHTML.replace('Stop Task', 'Perform Task');
-    //     }
-    //   };
-    //   return button;
-    // };
-
+    
 
 
     // Add the control to the map
@@ -608,228 +587,7 @@ function toggleSelectLayerButton(show) {
       this.style.backgroundColor = "#ccc"; // Change background color when clicked
     });
 
-    // GeoServer URL
-    var geoserverUrl = "https://pmc.geopulsea.com/geoserver";
-
-    // Variable to keep track of legend visibility
-    var legendVisible = true;
-
-    // Add the WMS Legend control to the map
-    var legendControl = L.control({ position: "topright" });
-
-    legendControl.onAdd = function (map) {
-      var div = L.DomUtil.create("div", "info legend");
-
-      // Function to fetch and populate the legend
-      function updateLegend() {
-        // Clear the existing legend
-        div.innerHTML = '';
-
-        // Fetch capabilities to get all layers in the 'pmc' workspace
-        fetch(geoserverUrl + "/ows?service=wms&version=1.3.0&request=GetCapabilities")
-          .then((response) => response.text())
-          .then((data) => {
-            // Parse capabilities XML response
-            var parser = new DOMParser();
-            var xml = parser.parseFromString(data, "text/xml");
-
-            // Extract layer names and legend URLs for layers in the 'pmc' workspace
-            var layers = xml.querySelectorAll('Layer[queryable="1"]');
-            layers.forEach(function (layer) {
-              var layerName = layer.querySelector("Name").textContent;
-              if (layerName.startsWith("pmc:")) {
-                var legendUrl =
-                  geoserverUrl +
-                  "/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=20&HEIGHT=20&LAYER=" +
-                  layerName;
-                div.innerHTML +=
-                  "<p><strong>" +
-                  layerName +
-                  "</strong></p>" +
-                  '<img src="' +
-                  legendUrl +
-                  '" alt="' +
-                  layerName +
-                  ' legend"><br>';
-              }
-            });
-          })
-          .catch((error) => {
-            console.error("Error fetching capabilities:", error);
-          });
-      }
-
-      // Initially update the legend
-      updateLegend();
-
-      // Apply CSS to fit to bottom right, occupy 60% of screen height, and provide scrollbar
-      div.style.position = "fixed";
-      div.style.bottom = "45%";
-      div.style.right = "43px";
-      div.style.height = "40vh";
-      div.style.width = "300px";
-      div.style.overflowY = "auto";
-      div.style.backgroundColor = "white";
-      div.style.border = "1px solid #ccc";
-      div.style.borderRadius = "10px";
-      div.style.padding = "10px";
-      div.style.transition = "all 0.3s ease-in-out"; // Add transition for smooth animation
-
-      // Toggle legend visibility function
-      function toggleLegend() {
-        if (legendVisible) {
-          div.style.height = "0"; // Minimize the legend
-          legendVisible = false;
-        } else {
-          div.style.height = "40vh"; // Maximize the legend
-          legendVisible = true;
-        }
-      }
-
-      // Add event listener to the legend control
-      div.addEventListener('click', toggleLegend);
-
-      return div;
-    };
-
-    // legendControl.addTo(map);
-
-    // Add collapsible button
-    var collapseButton = L.control({ position: "topright" });
-
-    collapseButton.onAdd = function (map) {
-      var button = L.DomUtil.create("button", "collapse-button");
-      button.innerHTML = "<i class='fa-solid fa-bars'></i>"; // Initial text
-
-      // Apply styling
-      button.style.backgroundColor = "white";
-      button.style.border = "2px solid #bbb";
-      button.style.width = "35px";
-      button.style.height = "35px";
-      button.style.borderRadius = "5px";
-      button.style.color = "black";
-      button.style.padding = "10px";
-      button.style.textAlign = "center";
-      button.style.textDecoration = "none";
-      button.style.display = "block";
-      button.style.margin = "10px";
-      button.style.cursor = "pointer";
-      // button.style.zIndex = "99999";
-      button.style.transition = "background-color 0.3s ease-in-out"; // Add transition for smooth animation
-
-      // Toggle legend visibility when the button is clicked
-      button.onclick = function () {
-        var legendDiv = document.querySelector(".info.legend");
-        if (legendDiv.style.height === "0px" || legendDiv.style.display === "none") {
-          legendDiv.style.display = "block";
-          legendDiv.style.height = "40vh";
-          legendDiv.style.width = "200px";
-          legendDiv.style.top = "43%";
-          legendDiv.style.right = "18px";
-          legendDiv.style.scrollbarWidth = "thin";
-          legendDiv.style.scrollbarColor = "#163140 white";
-          legendDiv.style.borderRadius = "20px";
-          legendDiv.style.boxShadow = "5px 5px 5px rgba(0, 0, 0, 0.7)"; // Add shadow
-          legendDiv.style.display = "block"; // Make sure it's visible if it was hidden
-          button.innerHTML = "<i class='fa-solid fa-bars'></i>";
-
-          button.style.backgroundColor = "white"; // Change color to indicate action
-          legendVisible = true;
-
-
-        } else {
-          legendDiv.style.display = "none";
-
-          button.innerHTML = "<i class='fa-solid fa-bars'></i>";
-          button.style.backgroundColor = "white"; // Change color to indicate action
-          legendVisible = false;
-        }
-      };
-
-      return button;
-    };
-
-    collapseButton.addTo(map);
-
-    // for legend////////////////////////////////////////////////////////////////////
-
-
-    // Create a legend control
-    var legend = L.control({ position: "bottomright" });
-
-    legend.onAdd = function (map) {
-      var div = L.DomUtil.create("div", "info legend");
-
-      // Initially hide the legend content
-      div.style.display = "none";
-
-      // Create a button to toggle the visibility of the legend content
-      var toggleButton = L.DomUtil.create("button", "legend-toggle");
-      toggleButton.innerHTML = "";
-      toggleButton.style.backgroundColor = "transparent";
-
-      toggleButton.onclick = function () {
-        if (div.style.display === "none") {
-          div.style.display = "block";
-        } else {
-          div.style.display = "none";
-        }
-      };
-      div.appendChild(toggleButton);
-
-      // Fetch capabilities to get all layers in the 'pmc' workspace
-      fetch(
-        "https://pmc.geopulsea.com/geoserver/ows?service=wms&version=1.3.0&request=GetCapabilities"
-      )
-        .then((response) => response.text())
-        .then((data) => {
-          // Parse capabilities XML response
-          var parser = new DOMParser();
-          var xml = parser.parseFromString(data, "text/xml");
-
-          // Extract layer names and legend URLs for layers in the 'pmc' workspace
-          var layers = xml.querySelectorAll('Layer[queryable="1"]');
-          layers.forEach(function (layer) {
-            var layerName = layer.querySelector("Name").textContent;
-            if (layerName.startsWith("pmc:")) {
-              var legendUrl =
-                this.geoserverUrl +
-                "/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=20&HEIGHT=20&LAYER=" +
-                layerName;
-              div.innerHTML +=
-                "<p><strong>" +
-                layerName +
-                "</strong></p>" +
-                '<img src="' +
-                legendUrl +
-                '" alt="' +
-                layerName +
-                ' legend"><br>';
-            }
-          });
-
-          // Apply CSS to fit to bottom right, occupy 60% of screen height, and provide scrollbar
-          div.style.position = "fixed";
-          div.style.bottom = "0";
-          div.style.right = "0";
-          div.style.height = "60vh";
-          div.style.width = "300px";
-          div.style.overflowY = "auto";
-          div.style.backgroundColor = "white";
-          div.style.border = "1px solid #ccc";
-          div.style.padding = "10px";
-        })
-        .catch((error) => {
-          console.error("Error fetching capabilities:", error);
-        });
-
-      return div;
-    };
-
-    legend.addTo(map);
-
-
-
+    
     // Customize the zoom control position
     map.zoomControl.setPosition('bottomright');
 
